# newlib-ia16

./: config-ml.in
debian/: changelog  control  copyright  rules
libgloss/: configure  configure.in
libgloss/ia16/: Makefile.in  an-printf.S  an-scanf.S  autofloat.ld.in  call-cvt.h  configure  configure.in  d3p-ms.ld.in  dbcs.h  dos-access.c  dos-argv.S  dos-chdir.S  dos-chmod.c  dos-close.S  dos-closer.S  dos-com-write.S  dos-com.ld  dos-com.ld.in  dos-cvt-file-time.c  dos-dbcs-strcspn.c  dos-dbcs-weaks.S  dos-dbcs.S  dos-dup.S  dos-dup2.S  dos-environ.S  dos-exe-small.ld  dos-exe-small.ld.in  dos-fstat.S  dos-fstat.c  dos-fstatr.c  dos-getcwd-impl.c  dos-getcwd.S  dos-getcwd.c  dos-getpid.S  dos-getpid.c  dos-gettimeofday.c  dos-gettimeofdayr.c  dos-heaplen.c  dos-i086.S  dos-isatty.S  (+74 more)
libgloss/ia16/rt-specs/: r-msdos.spec
newlib/: configure.host
newlib/libc/: Makefile.in
newlib/libc/argz/: Makefile.in
newlib/libc/ctype/: Makefile.in
newlib/libc/errno/: Makefile.in
newlib/libc/iconv/: Makefile.in
newlib/libc/include/: limits.h  reent.h  stdio.h
newlib/libc/locale/: Makefile.in
newlib/libc/misc/: Makefile.in
newlib/libc/posix/: Makefile.in
newlib/libc/reent/: Makefile.in
newlib/libc/search/: Makefile.in
newlib/libc/signal/: Makefile.in
newlib/libc/stdio/: Makefile.am  Makefile.in  makebuf.c  nano-vfprintf.c  stdio.c  vfprintf.c
newlib/libc/stdio64/: Makefile.in
newlib/libc/stdlib/: Makefile.in  assert.c  dtoa.c  mprec.c  nano-mallocr.c
newlib/libc/string/: Makefile.in
newlib/libc/syscalls/: Makefile.in  syskill.c
(+43 files in other folders)
